# interviewing

./: .coverage  .coveragerc  .gitignore  README.md  interviewing.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build.yml
interviewing/: __init__.py
interviewing/questions/: __init__.py  buy_and_sell_a_stock_once.py  word_is_palindrome.py
src/questions/: __init__.py  buy_and_sell_a_stock_once.py
src/tests/: test_buy_and_sell_a_stock_once.py
tests/: test_word_is_palindrome.py
